# tauri-svelte-todo-app

./: .gitignore  README.md  package.json
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  prelude.rs  task.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: lib.rs  main.rs
src/lib/: AddTask.svelte  GetAllTasks.svelte  Greet.svelte
